--- a/nbody/nbody.vcxproj
+++ b/nbody/nbody.vcxproj
@@ -140,6 +140,9 @@
     <ClInclude Include="stb_rect_pack.h" />
     <ClInclude Include="stb_textedit.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\Image\screenshot.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
